--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ collect in it.
     <script src="Scripts/objects/gameobject.js"></script>
     
     <script src="Scripts/objects/sea.js"></script>
+    
     <!--
     <script src="Scripts/objects/bird.js"></script>
     <script src="Scripts/objects/dragon.js"></script>
@@ -64,6 +65,10 @@ collect in it.
     <script src="Scripts/scenes/end.js"></script>
     <script src="Scripts/scenes/play.js"></script>
     <script src="Scripts/scenes/menu.js"></script>
+    <script src="Scripts/scenes/levels.js"></script>
+    <script src="Scripts/scenes/level1.js"></script>
+    <script src="Scripts/scenes/level2.js"></script>
+    <script src="Scripts/scenes/level3.js"></script>
 
     <!-- Main Game Scripts -->
     <script src="Scripts/core/game.js"></script>
