added player to each level

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ collect in it.
     <script src="Scripts/objects/gameobject.js"></script>
     
     <script src="Scripts/objects/sea.js"></script>
-    
+    <script src="Scripts/objects/player.js"></script>
     <!--
     <script src="Scripts/objects/bird.js"></script>
     <script src="Scripts/objects/dragon.js"></script>
