added Item and SeaMonster to the scene

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ collect in it.
     
     <script src="Scripts/objects/sea.js"></script>
     <script src="Scripts/objects/player.js"></script>
+    <script src="Scripts/objects/item.js"></script>
+    <script src="Scripts/objects/seamonster.js"></script>
     <!--
     <script src="Scripts/objects/bird.js"></script>
     <script src="Scripts/objects/dragon.js"></script>
