--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ collect in it.
     
     <script src="Scripts/objects/sea.js"></script>
     <script src="Scripts/objects/player.js"></script>
+    <script src="Scripts/objects/explosion.js"></script>
     <script src="Scripts/objects/item.js"></script>
     <script src="Scripts/objects/seamonsterLevel1.js"></script>
     <script src="Scripts/objects/seamonsterLevel2.js"></script>
