--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ collect in it.
     <script src="Scripts/scenes/end.js"></script>
     <script src="Scripts/scenes/play.js"></script>
     <script src="Scripts/scenes/menu.js"></script>
+    <script src="Scripts/scenes/instructions.js"></script>
     <script src="Scripts/scenes/levels.js"></script>
     <script src="Scripts/scenes/level1.js"></script>
     <script src="Scripts/scenes/level2.js"></script>
