Added SeaMonster for Level3

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ collect in it.
     <script src="Scripts/objects/item.js"></script>
     <script src="Scripts/objects/seamonsterLevel1.js"></script>
     <script src="Scripts/objects/seamonsterLevel2.js"></script>
+    <script src="Scripts/objects/seamonsterLevel3.js"></script>
     <script src="Scripts/objects/scoresystem.js"></script>
     <script src="Scripts/managers/collision.js"></script>
     <!--
