added fireball.ts and bullet.ts

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ collect in it.
     <script src="Scripts/objects/seamonsterLevel1.js"></script>
     <script src="Scripts/objects/seamonsterLevel2.js"></script>
     <script src="Scripts/objects/seamonsterLevel3.js"></script>
+    <script src="Scripts/objects/bullet.js"></script>
+    <script src="Scripts/objects/fireball.js"></script>
     <script src="Scripts/objects/scoresystem.js"></script>
     <script src="Scripts/managers/collision.js"></script>
     <!--
@@ -77,6 +79,8 @@ collect in it.
     <script src="Scripts/scenes/level1.js"></script>
     <script src="Scripts/scenes/level2.js"></script>
     <script src="Scripts/scenes/level3.js"></script>
+    
+   
 
     <!-- Main Game Scripts -->
     <script src="Scripts/core/game.js"></script>
