--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ collect in it.
     <script src="Scripts/scenes/level1.js"></script>
     <script src="Scripts/scenes/level2.js"></script>
     <script src="Scripts/scenes/level3.js"></script>
-    
+    <script src="Scripts/scenes/win.js"></script>
    
 
     <!-- Main Game Scripts -->
