Formatted the Code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--Source file name:index.html-->
 <!--Author's Name:Gurpreet Benipal-->
 <!--Last Modified By Gurpreet Benipal-->
-<!--Last Modified On: -->
+<!--Last Modified On: April 18, 2016 -->
 <!--Description: 
 The goal of this game is to gain scores by collecting different items and escape the player from enemies and weapons.
 In this game, the player is actually a Fish that can move up and down in the sea with the help of mouse pointer. 
@@ -15,6 +15,24 @@ There are 3 different levels in this game and each level has different themes, d
 collect in it.
 -->
 
+<!-- Revision History:
+    Initial Commit with Menu Scene
+    Added Levels to the Scene
+    Added Player to each Level
+    Added Item and Sea Monster to the Scene
+    Added SeaMonsters for Level1 and Level2
+    Added ScoreSystem and Collision Class
+    Updated Collision.ts
+    Added Sounds
+    Added explosion.ts
+    Changed the player and Player Destroy images
+    Added Instructions.ts
+    Added SeaMonster for Level3
+    Added Fireball.ts and Bullet.ts
+    Added WIN scene
+    Added Sprite and created animations
+    Applied animation to the monster at Level3
+-->
 <!-- This game is tested on Mozilla Firefox and Google Chrome-->
 
 <html lang="en">
@@ -50,7 +68,6 @@ collect in it.
     <script src="Scripts/objects/scene.js"></script>
     <script src="Scripts/objects/gameobject.js"></script>
     <script src="Scripts/objects/spritegameobject.js"></script>
-    
     <script src="Scripts/objects/sea.js"></script>
     <script src="Scripts/objects/player.js"></script>
     <script src="Scripts/objects/explosion.js"></script>
